observability-demo-ocp418/25-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-monolith
  namespace: observability-demo
  labels:
    app.kubernetes.io/name: demo-monolith
    app.kubernetes.io/part-of: observability-demo
spec:
  to:
    kind: Service
    name: demo-monolith
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
